# NumericalAnalysis

./: CMakeLists.txt  README.md
ODE/: CMakeLists.txt  EulerMethod.cpp  PredictorCorrectorMethod.cpp  RungeKutta.cpp
eigen_value/: CMakeLists.txt  InversePowerMethod.cpp  PowerMethod.cpp  QR_Method.cpp
interpolation/: CMakeLists.txt  LagrangeInterpolation.cpp
linear_equation/: CMakeLists.txt  GaussElimination.cpp
linear_equations/: CMakeLists.txt  CholeskyDecomposition.cpp  ColumnPivot.cpp  GaussElimination.cpp  GaussSeidelIteration.cpp  JacobiIteration.cpp  LU_Decomposition.cpp  SOR.cpp
nonlinear_equation/: BisectionMethod.cpp  FixedPointIteration.cpp  NewtonMethod.cpp  SecantMethod.cpp
